import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jlleitschuh.gradle.ktlint.reporter.ReporterType

plugins {
  id 'org.jlleitschuh.gradle.ktlint' version "$ktlintVersion"
  id "org.jetbrains.kotlin.plugin.serialization" version "$kotlinPluginSerializationVersion"
}

apply plugin: 'org.jetbrains.kotlin.plugin.serialization'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
eclipse.project.name = appName + '-core'

dependencies {
  // Canopy
  implementation "io.github.canopyengine:core:$canopyVersion"
  implementation "io.github.canopyengine:app-core:$canopyVersion"
  implementation "io.github.canopyengine:app-desktop:$canopyVersion"
  implementation "io.github.canopyengine:data-core:$canopyVersion"
  implementation "io.github.canopyengine:physics:$canopyVersion"
  implementation "io.github.canopyengine:graphics:$canopyVersion"
  implementation "io.github.canopyengine:input:$canopyVersion"
  implementation "io.github.canopyengine:data-saving:$canopyVersion"
  testApi "io.github.canopyengine:testkit:$canopyVersion"

  // Logging
  runtimeOnly("ch.qos.logback:logback-classic:1.5.16")

  // REFLECTION
  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
  // Testing
  testImplementation "org.jetbrains.kotlin:kotlin-test-junit5:$kotlinVersion"
  testImplementation "org.junit.jupiter:junit-jupiter:5.13.4"
  testImplementation 'org.assertj:assertj-core:3.27.7'
  testImplementation "org.mockito:mockito-core:5.16.1"
  testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.0"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.0"
  testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
}

ktlint {
  // Don't override the internal CLI unless you know what you're doing
  verbose.set(true)
  outputToConsole.set(true)
  ignoreFailures.set(false)

  reporters {
    reporter(ReporterType.PLAIN)
    reporter(ReporterType.CHECKSTYLE)
  }

  filter {
    exclude("**/generated/**")
    include("**/src/**/*.kt")
  }
}

// Attach ktlintFormat to build so it runs automatically
tasks.named("build") {
  dependsOn("ktlintFormat")
}

tasks.test {
  useJUnitPlatform() // <- important! tells Gradle to use JUnit 5 platform
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

java.sourceCompatibility = 17
java.targetCompatibility = 17
if (JavaVersion.current().isJava9Compatible()) {
  compileJava.options.release.set(17)
}
kotlin.compilerOptions.jvmTarget.set(JvmTarget.JVM_17)

sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
